--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -21,6 +21,7 @@ monitor=HDMI-A-1,1920x1080@60,1920x0,1,transform,1
 
 # Execute your favorite apps at launch
 exec-once = waybar & blueman-applet & hyprpaper
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -32,6 +33,9 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 #env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
+env = QT_QPA_PLATFORM=xcb
+
+
 
 workspace = 1, monitor:DP-1, default:true
 workspace = 6, monitor:HDMI-A-1, default:true
@@ -137,6 +141,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
+bind = $mainMod SHIFT, F, fullscreen
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, L, movefocus, l
