--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -33,9 +33,8 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 #env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
-env = QT_QPA_PLATFORM=xcb
-
-
+env = QT_QPA_PLATFORM, xcb
+env = EDITOR, nvim
 
 workspace = 1, monitor:DP-3, default:true
 workspace = 6, monitor:HDMI-A-1, default:true
