--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -141,6 +141,7 @@ bind = $mainMod, SPACE, exec, rofi -show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, F, fullscreen
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | swappy -f -
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, L, movefocus, l
