added keepassxc autostart and rule to alway spawn in first workspace

--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -20,7 +20,7 @@ monitor=HDMI-A-1,1920x1080@60,1920x0,1,transform,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & blueman-applet & hyprpaper
+exec-once = waybar & blueman-applet & hyprpaper & keepassxc & 
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # Source a file (multi-file configs)
@@ -127,9 +127,9 @@ device:epic-mouse-v1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-
 windowrule = float, title:(rofi)
 windowrule = center, title:(rofi)
+windowrule = workspace 1, title:(.*)( - KeePassXC)
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
