--- a/hyperland/.config/hypr/hyprpaper.conf
+++ b/hyperland/.config/hypr/hyprpaper.conf
@@ -1,10 +1,8 @@
-preload = ~/Repo/dotfiles/hyperland/.config/hypr/wallhaven-3zzygv_1920x1080.png
+preload = ~/Repo/dotfiles/hyperland/.config/hypr/windows-error.jpg
 #if more than one preload is desired then continue to preload other backgrounds
-preload = ~/Repo/dotfiles/hyperland/.config/hypr/wallhaven-3zzygv_1080x1920.png
-# .. more preloads
 
 #set the default wallpaper(s) seen on inital workspace(s) --depending on the number of monitors used
-wallpaper = DP-1, ~/Repo/dotfiles/hyperland/.config/hypr/wallhaven-3zzygv_1920x1080.png
+wallpaper = DP-3, ~/Repo/dotfiles/hyperland/.config/hypr/windows-error.jpg
 #if more than one monitor in use, can load a 2nd image
-wallpaper = HDMI-A-1, ~/Repo/dotfiles/hyperland/.config/hypr/wallhaven-3zzygv_1080x1920.png
+wallpaper = HDMI-A-1, ~/Repo/dotfiles/hyperland/.config/hypr/windows-error.jpg 
 # .. more monitors
