changed underline thikness and position for better neovim indent line visualization

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -22,6 +22,8 @@ font_features JetBrainsMonoNFM-Bold     calt zero +ss01
 font_features JetBrainsMonoNFM-Bold     calt zero +ss01
 font_features JetBrainsMonoNFM-Bold     calt zero +ss01
 
+modify_font underline_position +4
+modify_font underline_thickness 150%
 #: }}}
 
 #: Cursor customization {{{
