--- a/hyperland/.config/hypr/hyprland.conf
+++ b/hyperland/.config/hypr/hyprland.conf
@@ -137,9 +137,10 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, kitty
 bind = $mainMod SHIFT, Q, killactive, 
-bind = $mainMod CONTROL, Q, exit, 
+# bind = $mainMod CONTROL, Q, exit, 
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, SPACE, exec, rofi -show drun
+bind = $mainMod, SPACE, exec, sh $HOME/.config/rofi/bin/launcher
+bind = $mainMod CONTROL, Q, exec, sh $HOME/.config/rofi/bin/powermenu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, F, fullscreen
