vertical monitor now defaults to horizontal split

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -133,16 +133,8 @@ animations {
 # "Smart gaps" / "No gaps when only"
 # uncomment all if you wish to use that.
 # workspace = f[1], gapsout:0, gapsin:0
-workspace = 1, monitor:DP-3,
-workspace = 2, monitor:DP-3
-workspace = 3, monitor:DP-3
-workspace = 4, monitor:DP-3
-workspace = 5, monitor:DP-3
-workspace = 6, monitor:HDMI-A-1
-workspace = 7, monitor:HDMI-A-1, layoutopt:center_master_fallback:top
-workspace = 8, monitor:HDMI-A-1
-workspace = 9, monitor:HDMI-A-1
-workspace = 0, monitor:HDMI-A-1
+workspace = r[1-5], monitor:DP-3
+workspace = r[6-10], monitior:HDMI-A-1, layoutopt:orientation:top
 
 # windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
 # windowrule = rounding 0, floating:0, onworkspace:w[tv1]
