better ultrawide screen layout

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -143,6 +143,7 @@ workspace = 7, monitor:HDMI-A-1, layoutopt:orientation:top
 workspace = 8, monitor:HDMI-A-1, layoutopt:orientation:top
 workspace = 9, monitor:HDMI-A-1, layoutopt:orientation:top
 workspace = 10, monitor:HDMI-A-1, layoutopt:orientation:top
+workspace = m[DP-3] w[t1], gapsout:15 1000 20 1000
 
 # windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
 # windowrule = rounding 0, floating:0, onworkspace:w[tv1]
@@ -157,13 +158,15 @@ dwindle {
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_status = slave
+    orientation = center
     slave_count_for_center_master = 2
     center_master_fallback = right
-    allow_small_split = true
     mfact = .45
-    orientation = center
-    inherit_fullscreen = false
+    new_on_top = false
+    new_status = slave
+
+    # allow_small_split = true
+    # inherit_fullscreen = false
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
